# tcp-splitter

./: .travis.yml  Cargo.toml  LICENSE  README.md
tcp-splitter/: Cargo.toml
tcp-splitter-cli/: Cargo.toml
tcp-splitter-cli/src/: config.rs  lib.rs  main.rs
tcp-splitter/src/: lib.rs
tcp-splitter/src/client/: client_handler.rs  downstream.rs  mod.rs  splitted_upstream.rs  upstream.rs
tcp-splitter/src/proxy/: mod.rs  proxy_logger.rs  proxy_state.rs  proxy_stream.rs
tcp-splitter/src/server/: acceptor.rs
tcp-splitter/src/sniffer/: mod.rs  sniffer_handler.rs  sniffer_handler_spawner.rs  upstream.rs
tcp-splitter/tests/: echo.rs
