[package]
name = "tcp-splitter-cli"
version = "0.1.0-rc0"
authors = ["Bence SZIGETI <bence.szigeti@gohyda.com>"]
edition = "2018"
description = """
TCP proxy server with the ability to copy clients upstream to sniffer servers.
"""

[[bin]]
name = "tcp-splitter"
path = "src/main.rs"

[dependencies]
clap = "2.32.0"
env_logger = "0.6.1"
futures = "0.1.25"
hostname = "0.1.5"
log = "0.4.6"
tokio = { version = "0.1.17", features = ["async-await-preview"] }
users = "0.8.1"

tcp-splitter = { path = "../tcp-splitter" }
