[package]
name = "tcp-splitter"
version = "0.1.0-rc1"
authors = ["Bence SZIGETI <bence.szigeti@gohyda.com>"]
edition = "2018"
description = """
TCP proxy server with the ability to copy clients upstream to sniffer servers.
"""

[dependencies]
futures = "0.1.25"
log = "0.4.6"
tokio = { version = "0.1.17", features = ["async-await-preview"] }
